TheKabal (9 March 2013)
--------------------------------------
calc_planet_torps has been replaced with CalcLevels::planetTorps
calc_planet_shields has been replaced with CalcLevels::planetShields
calc_planet_beams has been replaced with CalcLevels::planetBeams
collect_bounty has been replaced with BntBounty::collect
kick_off_planet has been replaced with BntShip::leavePlanet
player_insignia_name has been replaced with BntPlayer::getInsignia
t_port has been replaced with BntPorts::getType
is_same_team has been replaced with BntTeam::sameTeam
check_ban has been replaced with CheckBan::isBanned
scan_success has been replaced with BntScan::success
distribute_toll has been replaced with BntToll::distribute
Removed "bnt" namespace, moving all files from vendor/bnt to classes/
Fixed formatting, variable assignment, comment type, and so forth in the Xenobe include files
Lots of various coding style changes

TheMightyDude (06 March 2013)
--------------------------------------
Fixed some issues in Create Universe, Destroy Schema (not perfect has some config and language issues)

TheKabal (3 March 2013)
--------------------------------------
Add handling for invalid xml schema files
Split create_schema into the more accurate destroy_schema and create_schema
Switched create_schema to use XML schema files in the schema directory
Added schema directory, which contains the XML schema files for building the database

TheKabal (2 March 2013)
--------------------------------------
TEXT_GOTOMAIN has been replaced by \bnt\bnttext::gotomain, which is auto-loaded from the vendor/bnt directory.
Making numbers () calls more consistent, replacing with number_format to move towards removing number() from global_includes
Fixed PHP Notice: Object of class ADORecordSet_mysqlt could not be converted to int
Replace NUMBER() with number_format(), eliminating the need for the NUMBER() function, reducing the number of global includes